--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta http-equiv-"X-UA-Compatible" content="IE-edge">
         <title>Link-Tree</title>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
         <style>
