--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="UTF-8">
-        <meta http-equiv-"X-UA-Compatible" content="IE-edge">
-        <title>Link-Tree</title>
+<main>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
         <style>
         .profile-picture{
@@ -47,15 +40,12 @@
         body{
             background-image: linear-gradient(35deg, #CCFFFF, #FFCCCC);
         }
-        </style>
-    </head>    
+        </style>  
     <img class="profile-picture image-design image-margin" src= "eren_jaeger.jpg"></img>
-    <body>
     <h1>Utkarsh Raghunath</h1>
     <h2>Follow me on my socials👇🏻</h2>
-    </body>
     <div><p><a target="_blank" href="https://www.instagram.com/utkarsh.raghunath/">Instagram</a></p></div>
     <div><p><a target="_blank" href="https://twitter.com/_utkarsh1">Twitter</a></p></div>
     <div><p><a target="_blank" href="https://www.linkedin.com/in/utkarsh-raghunath-87b11a173/">LinkedIn</a></p></div>
     <div><p><a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">YouTube</a></p></div>
-    </html>
+</main>
